--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,8 @@ jobs:
 
       - run: yarn build
       - run: touch dist/CNAME
-      - run: echo "sunburst.wang" > dist/CNAME
+      - run: echo "sunburst.wang" >> dist/CNAME
       - deploy:
           command: |
             git push origin `git subtree split --prefix dist master`:master --force
+            rm -rf dist
