--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:latest
 
-    working_directory: ~/repo
+    working_directory: ~/
 
     steps:
       - add_ssh_keys:
@@ -27,7 +27,9 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn build
-      - run: echo "sunburst.wang" >> dist/CNAME
+      - run: cd dist
+      - run: echo "sunburst.wang" >> CNAME
+      - run: cd ..
       - deploy:
           command: |
             git push origin `git subtree split --prefix dist master`:master --force
