--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,9 @@ jobs:
 
       - run:
           name: Install dependencies 
-          command: yarn install
+          command: 
+            yarn config set registry https://registry.npm.taobao.org
+            yarn install
 
       - save_cache:
           paths:
