--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
 
       - run:
           name: Install dependencies 
-          command: 
-            yarn config set registry https://registry.npm.taobao.org
+          command: |
+            yarn config set sass-binary-site https://npm.taobao.org/mirrors/node-sass
             yarn install
 
       - save_cache:
